--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
