#5 dependency names corrected after renaming.

--- a/greendot-db-dao/pom.xml
+++ b/greendot-db-dao/pom.xml
@@ -4,11 +4,6 @@
   ~  which is part of this source code package.
   -->
 
-<!--
-  ~  This file is subject to the terms and conditions defined in file 'LICENSE.md',
-  ~  which is part of this source code package.
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -21,17 +16,17 @@
     <dependencies>
         <dependency>
             <groupId>greendot-db</groupId>
-            <artifactId>deps</artifactId>
+            <artifactId>greendot-db-deps</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>greendot-db</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>greendot-db-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>greendot-db</groupId>
-            <artifactId>greendot-db-core</artifactId>
+            <artifactId>greendot-db-jpa-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
