--- a/greendot-db-jpa-core/pom.xml
+++ b/greendot-db-jpa-core/pom.xml
@@ -10,13 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>greendot-db</groupId>
-    <artifactId>greendot-db-core</artifactId>
+    <artifactId>greendot-db-jpa-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>greendot-db</groupId>
-            <artifactId>deps</artifactId>
+            <artifactId>greendot-db-deps</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
