--- a/greendot-db-dao/pom.xml
+++ b/greendot-db-dao/pom.xml
@@ -40,6 +40,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>3.1</version>
             </plugin>
         </plugins>
     </build>
