--- a/greendot-db-deps/pom.xml
+++ b/greendot-db-deps/pom.xml
@@ -17,6 +17,7 @@
         <spring.version>4.3.3.RELEASE</spring.version>
         <hibernate.version>5.2.3.Final</hibernate.version>
         <apache-commons.version>2.1.1</apache-commons.version>
+        <apache-commons-lang3.version>3.5</apache-commons-lang3.version>
         <slf4j.version>1.7.21</slf4j.version>
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -53,6 +54,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>${apache-commons.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache-commons-lang3.version}</version>
         </dependency>
 
         <dependency>
