--- a/greendot-db-jpa-core/pom.xml
+++ b/greendot-db-jpa-core/pom.xml
@@ -30,6 +30,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>3.1</version>
             </plugin>
         </plugins>
     </build>
